public/assets/css/burger_style.css
/* Write a README */

:root {
    --header-fonts: 'Righteous', cursive;
    --body-fonts: 'Cinzel', serif;
    --burger-bun: rgb(110,68,11);
}

body, html {
    padding: 0%;
    margin: 0%;
    height: 100%;
    width: 100%;
}

body {
    background-image: url('../img/burger_grill.jpg');
    background-size: cover;
}

/* Button reset */
button {
    padding: 0%;
    border: none;
    font: inherit;
    color: inherit;
    background-color: transparent;
    cursor: pointer;
}

h2 {
    font-family: var(--header-fonts);
    color: white;
    -webkit-text-stroke: 1px black;
}

/* Developer-named values */
#add-a-burg {
    display: flex;
    flex-wrap: column;
    justify-content: center;
    font-size: 1.5rem;
}

#add-submit {
    width: 225px;
    border-top: 30px solid var(--burger-bun);
    border-bottom: 15px solid var(--burger-bun);
    border-radius: 50px 50px 5px 5px;
    margin-top: 5%;
    padding: 2%;
    font-family: var(--header-fonts);
    font-size: 0rem;
    box-shadow: 5px 5px 5px black;
    transition: font-size 0.5s ease, background-color 0.5s ease;
    color: white;
    -webkit-text-stroke: 1px black;
    background-color: rgba(73, 38, 38, 0.8);
}

#add-submit:hover {
    font-size: 1.5rem;
    background-color: rgb(73, 38, 38, 1);
}

#big-burger {
    justify-self: center;
}

#burg-display-area {
    justify-items: center;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

#burg-name {
    height: 50px;
    width: 450px;
    font-size: 2rem;
    font-family: var(--header-fonts);
}

#burg-legend {
    color: white;
    -webkit-text-stroke: 1px black;
    font-size: 3rem;
}

#close-button {
    float: right;
    width: 1.5rem;
    line-height: 1.5rem;
    text-align: center;
    cursor: pointer;
    border-radius: 0.25rem;
    background-color: white;
    color: darkblue;
    margin: 5px 5px 0px 0px;
    box-shadow: 5px 5px 5px black;
    transition: background-color 0.75s ease, color 0.75s ease;
}

#close-button:hover {
    background-color: darkblue;
    color: white;
}

#content-container {
    display: grid;
    grid-template-rows: 1fr, 2fr;
    background-color: rgba(110, 104, 104, .8);
    height: 100%;
}

.devour-burg {
    font-family: var(--header-fonts);
    border: 1px solid black;
    margin: 2px 0px;
    padding: 2px 2px;
    border-radius: 5rem;
    background-color: white;
    transition: background-color 0.75s ease, color 0.75s ease;
}

.devour-burg:hover {
    background-color: darkblue;
    color: white;
}

#eaten, #not-eaten {
    border: 2px solid black;
    height: 400px;
    width: 400px;
    overflow-y: scroll;
    box-shadow: 5px 5px 5px black;
    background-image: url('../img/table_cloth.jpg');
    padding: 2px 10px;
}

.eaten-burger, .uneaten-burger {
    font-family: var(--body-fonts);
    font-size: 1.5rem;
    border: 1px solid black;
    color: white;
    background-color: darkblue;
}

.eaten-burger {
    margin: 5px 0px;
}

.fade-in {
    animation: fadein 5s;
}

.fade-out {
    animation: fadeinout 5s;
}

#form-house {
    text-align: center;
    width: 500px;
    height: 240px;
    box-shadow: 5px 5px 5px black;
    font-family: var(--header-fonts);
    background-image: url('../img/table_cloth.jpg');
    margin-top: 20px;
}

#main-content {
    margin-top: 5%;
}

#modal-box {
    font-family: var(--header-fonts);
    font-size: 2.25rem;
    background-color: var(--burger-bun);
    position: absolute;
    top: 50%;
    left: 50%;
    height: 250px;
    border-radius: .25rem;
    box-shadow: 5px 5px 5px black;
    transform: translate(-50%, -50%);
    padding: 25px;
    color: white;
    -webkit-text-stroke: 2px black;
}

#modal-container {
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: rgba(110, 104, 104, .8);
}

.modal-container-class {
    visibility: hidden;
}

.modal-display {
    visibility: visible;
}

#title {
    color: red;
    text-shadow: 7px 7px 4px rgba(0, 0, 0, 1);
    opacity: 0;
    font-family: var(--header-fonts);
    font-size: 100px;
    position: absolute;
    left: 20%;
}

/* Keyframes */

@keyframes fadein {
    from {opacity: 0}
    to {opacity: 1}
}

@keyframes fadeinout {
    from {opacity: 1}
    to {opacity: 0}
}

/* Media Queries */

@media screen and (max-width: 1400px) {
    #big-burger {
        width: 300px;
    }
}

@media screen and (max-width: 1150px) {
    #big-burger {
        width: 100px;
    }
    #eaten {
        margin-right: 5px;
    }
    #modal-box {
        font-size: 2rem;
    }
    #not-eaten {
        margin-left: 5px;
    }
}

@media screen and (max-width: 950px) {
    #big-burger {
        visibility: hidden;
    }
    #burg-display-area {
        margin: 25px;
        display: flex;
        flex-flow: column;
        flex-wrap: wrap;
        align-items: center;
    }
    #eaten, #not-eaten {
        width: 90%;
    }
    #form-house {
        margin: 0px 25px 25px;
        width: 90%;
    }
    #modal-box {
        width: 60%;
        font-size: 1.75rem;
    }
}

@media screen and (max-width: 550px) {
    #modal-container {
        height: 115%;
    }
    #modal-box {
        font-size: 1.25rem;
    }
}

